--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-= Plast (PLateforme d'Analyse STatique)
+= Plast
 
 `plast` is a modular command-line threat hunting tool.
 
@@ -35,11 +35,11 @@ $ ./setup.py install
 To install a developpement environment, issue the following commands:
 
 ----sh
-$ git clone $TARGET
+$ git clone . $TARGET
 $ cd $TARGET
-$ python -m venv .env
+$ python3 -m venv .env
 $ source .env/bin/activate
-$ pip install -r REQUIREMENTS
+$ pip install --upgrade pip && pip install -r REQUIREMENTS
 ----
 
 `$TARGET` represents the working directory where `plast` will be installed.
