--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= Plast
+= plast
 
 `plast` is a modular command-line threat hunting tool.
 
@@ -14,11 +14,12 @@ _This tool must ALWAYS be used in a confined environment._
 
 Follow the steps described below to install the project on the system.
 
-==== Debian (_apt_)
+==== Debian-based (`apt`)
 
 Install the latest Python 3+ environment:
 
-----sh
+[source,sh]
+----
 # apt install -y python3 python3-pip
 ----
 
@@ -28,13 +29,13 @@ Each preprocessor and postprocessor has its own dependencies, which may not be l
 
 Installing `plast` as a system-wide utility is as simple as one command:
 
-----sh
+[source,sh]
 $ ./setup.py install
 ----
 
 To install a developpement environment, issue the following commands:
 
-----sh
+[source,sh]
 $ git clone . $TARGET
 $ cd $TARGET
 $ python3 -m venv .env
