--- a/README.adoc
+++ b/README.adoc
@@ -14,13 +14,13 @@ _This tool must ALWAYS be used in a confined environment._
 
 Follow the steps described below to install the project on the system.
 
-==== Debian-based (`apt`)
+==== Debian-based system
 
 Install the latest Python 3+ environment:
 
 [source,sh]
 ----
-# apt install -y python3 python3-pip
+apt install -y python3 python3-pip
 ----
 
 Each preprocessor and postprocessor has its own dependencies, which may not be listing here.
@@ -30,17 +30,19 @@ Each preprocessor and postprocessor has its own dependencies, which may not be l
 Installing `plast` as a system-wide utility is as simple as one command:
 
 [source,sh]
-$ ./setup.py install
+----
+./setup.py install
 ----
 
 To install a developpement environment, issue the following commands:
 
 [source,sh]
-$ git clone . $TARGET
-$ cd $TARGET
-$ python3 -m venv .env
-$ source .env/bin/activate
-$ pip install --upgrade pip && pip install -r REQUIREMENTS
+----
+git clone . $TARGET
+cd $TARGET
+python3 -m venv .env
+source .env/bin/activate
+pip install --upgrade pip && pip install -r REQUIREMENTS
 ----
 
 `$TARGET` represents the working directory where `plast` will be installed.
