--- a/TODO
+++ b/TODO
@@ -1,3 +1,2 @@
-<TODO>
-    Spawn pool-based processes for dynamically-loaded models.Post module(s).
-</TODO>
+<TODO>Spawn pool-based processes for dynamically-loaded models.Post module(s).</TODO>
+<TODO>Complete the API documentation in README.adoc.</TODO>
