--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 <TODO>Spawn pool-based processes for dynamically-loaded models.Post module(s).</TODO>
 <TODO>Complete the API documentation in README.adoc.</TODO>
+<TODO>JSON configuration file.</TODO>
