--- a/README.adoc
+++ b/README.adoc
@@ -1,10 +1,11 @@
-= plast — Threat Hunting Tool & Framework
+= **plast** — Threat Hunting Framework & Utility
 Nelson "sk4la" Cornet <https://github.com/sk4la>
 :caution-caption: :fire:
 :uri-org: https://github.com/sk4la
 :uri-repo: {uri-org}/plast
 :uri-raw: https://raw.githubusercontent.com/sk4la/plast
 :uri-license: {uri-raw}/master/LICENSE
+:uri-contrib: {uri-raw}/master/CONTRIBUTING.adoc
 :uri-python: https://www.python.org
 :uri-yara: https://github.com/VirusTotal/yara
 
@@ -14,7 +15,7 @@ image:https://img.shields.io/badge/python-3.7-blue.svg[link={uri-python}] image:
 
 Under the hood, `plast` uses {uri-yara}[YARA] through `multiprocessing` tasks to perform rule-based https://en.wikipedia.org/wiki/Indicator_of_compromise[IOC] detection on multiple types of input.
 
-The main goal of the `plast` project is to provide an *efficient & effortless* way to detect indicators of compromission during incident-response operations.
+The main goal of the `plast` project is to provide an **efficient & effortless** way to detect indicators of compromission during incident-response operations.
 
 It provides a comprehensive framework that easily allows processing of multiple data types. It also embeds all modules in one single tool, allowing `plast` to be used on the field as a standalone utility.
 
@@ -113,73 +114,7 @@ plast -o out --callbacks=example --post=example filesystem -i case
 
 == Contributing
 
-The `plast` project can only be useful if there are modules helping to process custom data formats.
-
-Following this goal, the framework allows to easily integrate new modules by creating custom classes and simply dropping them in the `framework/processors/*` directories. That's it.
-
-=== Custom modules
-
-The core process is handled by three main classes defined in the `framework.contexts.models` module. This module defines:
-
-* The `Pre` reference class;
-* The `Post` reference class;
-* And the `Callback` reference class.
-
-*A module must be a subclass of one of these reference classes.*
-
-==== Preprocessing
-
-Preprocessing is handled by the `Pre` reference class from the `framework.contexts.models` module. To create a preprocessing module, one needs to create a module containing a subclass of `framework.contexts.models.Pre` named `Pre`.
-
-Following is a basic example of a preprocessing module that registers the file-based evidence `infected.pdf` for tracking:
-
-[source,python]
-----
-from framework.contexts import models as _models
-
-class Pre(_models.Pre):
-    def run(self):
-        self.case.track_file("/tmp/infected.pdf")
-----
-
-`Pre` modules must have a `run` method to be invocated by the core engine.
-
-Each `Pre` module corresponds to a positional argument in `plast`. One can add command-line argument(s) in the module by overriding the `__init__` method like this:
-
-[source,python]
-----
-from framework.contexts import models as _models
-from framework.contexts.logger import Logger as _log
-
-class Pre(_models.Pre):
-    def __init__(self, parser):
-        parser.add_argument(
-            "-j", "--jobs",
-            type=int, 
-            default=4, 
-            help="number of concurrent job(s)")
-        
-        parser.add_argument(
-            "--debug", 
-            default="False", 
-            help="run in debug mode")
-
-    def run(self):
-        self.case.track_file("/tmp/infected.pdf")
-
-        if self.case.arguments.debug:
-            _log.debug("Registering file {}.".format("/tmp/infected.pdf"))
-----
-
-The syntax is based on the `argparse` module syntax.
-
-==== Postprocessing
-
-`TODO`
-
-==== Callback
-
-`TODO`
+Please refer to the instructions provided in {uri-contrib}[CONTRIBUTING.adoc] to get started.
 
 == Versioning
 
